--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -71,6 +71,12 @@ jobs:
             -e SPRING_DATASOURCE_PASSWORD=${PROD_DB_PASSWORD} \
             -e SPRING_DATASOURCE_DRIVER_CLASS_NAME=org.mariadb.jdbc.Driver \
             -e SPRING_JPA_HIBERNATE_DDL_AUTO=create \
+            -e SPRING_PROFILES_ACTIVE=prod \
+            -e SPRING_DATASOURCE_URL=${PROD_DB_URL} \
+            -e SPRING_DATASOURCE_USERNAME=${PROD_DB_USERNAME} \
+            -e SPRING_DATASOURCE_PASSWORD=${PROD_DB_PASSWORD} \
+            -e SPRING_DATASOURCE_DRIVER_CLASS_NAME=org.mariadb.jdbc.Driver \
+            -e SPRING_JPA_HIBERNATE_DDL_AUTO=create \
             -e SPRING_JPA_SHOW_SQL=true \
             -e SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT=org.hibernate.dialect.MariaDBDialect \
             -e SPRING_JPA_PROPERTIES_HIBERNATE_FORMAT_SQL=true \
@@ -82,11 +88,13 @@ jobs:
             -e SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_GOOGLE_CLIENT_SECRET=${GOOGLE_CLIENT_SECRET} \
             -e SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_KAKAO_CLIENT_ID=${KAKAO_CLIENT_ID} \
             -e SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_KAKAO_CLIENT_SECRET=${KAKAO_CLIENT_SECRET} \
-            -e CLOUD_AWS_S3_BUCKET_NAME=${PROD_S3_BUCKET_NAME} \
-            -e CLOUD_AWS_STACK_AUTO=false \
-            -e CLOUD_AWS_REGION_STATIC=ap-northeast-2 \
-            -e CLOUD_AWS_CREDENTIALS_ACCESS_KEY=${PROD_AWS_ACCESS_KEY} \
-            -e CLOUD_AWS_CREDENTIALS_SECRET_KEY=${PROD_AWS_SECRET_KEY} \
+            -e SPRING_CLOUD_AWS_S3_BUCKET_NAME=${PROD_S3_BUCKET_NAME} \
+            -e SPRING_CLOUD_AWS_STACK_AUTO=false \
+            -e SPRING_CLOUD_AWS_REGION_STATIC=ap-northeast-2 \
+            -e SPRING_CLOUD_AWS_CREDENTIALS_ACCESS_KEY=${PROD_AWS_ACCESS_KEY} \
+            -e SPRING_CLOUD_AWS_CREDENTIALS_SECRET_KEY=${PROD_AWS_SECRET_KEY} \
             ${{ secrets.DOCKERHUB_USERNAME }}/webide3ever:latest
-          sudo docker logs -f web-ide-3ever
+          
+          sudo docker exec web-ide-3ever printenv | grep SPRING
+          sudo docker logs web-ide-3ever
           EOF
