--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,6 +40,32 @@ jobs:
         with:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
+      - name: Create environment variables file
+        run: |
+          echo SPRING_DATASOURCE_URL=${{ secrets.PROD_DB_URL }} > env.list
+          echo SPRING_DATASOURCE_USERNAME=${{ secrets.PROD_DB_USERNAME }} >> env.list
+          echo SPRING_DATASOURCE_PASSWORD=${{ secrets.PROD_DB_PASSWORD }} >> env.list
+          echo SPRING_DATASOURCE_DRIVER_CLASS_NAME=org.mariadb.jdbc.Driver >> env.list
+          echo SPRING_JPA_HIBERNATE_DDL_AUTO=create >> env.list
+          echo SPRING_JPA_SHOW_SQL=true >> env.list
+          echo SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT=org.hibernate.dialect.MariaDBDialect >> env.list
+          echo SPRING_JPA_PROPERTIES_HIBERNATE_FORMAT_SQL=true >> env.list
+          echo SPRING_JPA_PROPERTIES_HIBERNATE_HIGHLIGHT_SQL=true >> env.list
+          echo SPRING_JPA_PROPERTIES_HIBERNATE_USE_SQL_COMMENTS=true >> env.list
+          echo SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_NAVER_CLIENT_ID=${{ secrets.NAVER_CLIENT_ID }} >> env.list
+          echo SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_NAVER_CLIENT_SECRET=${{ secrets.NAVER_CLIENT_SECRET }} >> env.list
+          echo SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }} >> env.list
+          echo SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }} >> env.list
+          echo SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_KAKAO_CLIENT_ID=${{ secrets.KAKAO_CLIENT_ID }} >> env.list
+          echo SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_KAKAO_CLIENT_SECRET=${{ secrets.KAKAO_CLIENT_SECRET }} >> env.list
+          echo SPRING_CLOUD_AWS_S3_BUCKET_NAME=${{ secrets.PROD_S3_BUCKET_NAME }} >> env.list
+          echo SPRING_CLOUD_AWS_STACK_AUTO=false >> env.list
+          echo SPRING_CLOUD_AWS_REGION_STATIC=ap-northeast-2 >> env.list
+          echo SPRING_CLOUD_AWS_CREDENTIALS_ACCESS_KEY=${{ secrets.PROD_AWS_ACCESS_KEY }} >> env.list
+          echo SPRING_CLOUD_AWS_CREDENTIALS_SECRET_KEY=${{ secrets.PROD_AWS_SECRET_KEY }} >> env.list
+          echo SPRING_PROFILES_ACTIVE=prod >> env.list
+          echo SPRING_CONFIG_LOCATION=/config/application-prod.yml >> env.list
+
       - name: Transfer application-prod.yml to EC2
         run: scp -o StrictHostKeyChecking=no src/main/resources/application-prod.yml ubuntu@${{ secrets.EC2_PUBLIC_IP }}:/home/ubuntu/application-prod.yml
 
@@ -67,36 +93,8 @@ jobs:
               sudo docker rm web-ide-3ever
           fi
           sudo docker run -d --name web-ide-3ever \
+            --env-file /home/ubuntu/env.list \
             -v /home/ubuntu/application-prod.yml:/config/application-prod.yml \
-            -e SPRING_PROFILES_ACTIVE=prod \
-            -e SPRING_CONFIG_LOCATION=/config/application-prod.yml \
-            -e SPRING_DATASOURCE_URL=${PROD_DB_URL} \
-            -e SPRING_DATASOURCE_USERNAME=${PROD_DB_USERNAME} \
-            -e SPRING_DATASOURCE_PASSWORD=${PROD_DB_PASSWORD} \
-            -e SPRING_DATASOURCE_DRIVER_CLASS_NAME=org.mariadb.jdbc.Driver \
-            -e SPRING_JPA_HIBERNATE_DDL_AUTO=create \
-            -e SPRING_PROFILES_ACTIVE=prod \
-            -e SPRING_DATASOURCE_URL=${PROD_DB_URL} \
-            -e SPRING_DATASOURCE_USERNAME=${PROD_DB_USERNAME} \
-            -e SPRING_DATASOURCE_PASSWORD=${PROD_DB_PASSWORD} \
-            -e SPRING_DATASOURCE_DRIVER_CLASS_NAME=org.mariadb.jdbc.Driver \
-            -e SPRING_JPA_HIBERNATE_DDL_AUTO=create \
-            -e SPRING_JPA_SHOW_SQL=true \
-            -e SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT=org.hibernate.dialect.MariaDBDialect \
-            -e SPRING_JPA_PROPERTIES_HIBERNATE_FORMAT_SQL=true \
-            -e SPRING_JPA_PROPERTIES_HIBERNATE_HIGHLIGHT_SQL=true \
-            -e SPRING_JPA_PROPERTIES_HIBERNATE_USE_SQL_COMMENTS=true \
-            -e SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_NAVER_CLIENT_ID=${NAVER_CLIENT_ID} \
-            -e SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_NAVER_CLIENT_SECRET=${NAVER_CLIENT_SECRET} \
-            -e SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID} \
-            -e SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_GOOGLE_CLIENT_SECRET=${GOOGLE_CLIENT_SECRET} \
-            -e SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_KAKAO_CLIENT_ID=${KAKAO_CLIENT_ID} \
-            -e SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_KAKAO_CLIENT_SECRET=${KAKAO_CLIENT_SECRET} \
-            -e SPRING_CLOUD_AWS_S3_BUCKET_NAME=${PROD_S3_BUCKET_NAME} \
-            -e SPRING_CLOUD_AWS_STACK_AUTO=false \
-            -e SPRING_CLOUD_AWS_REGION_STATIC=ap-northeast-2 \
-            -e SPRING_CLOUD_AWS_CREDENTIALS_ACCESS_KEY=${PROD_AWS_ACCESS_KEY} \
-            -e SPRING_CLOUD_AWS_CREDENTIALS_SECRET_KEY=${PROD_AWS_SECRET_KEY} \
             -p 8080:8080 ${{ secrets.DOCKERHUB_USERNAME }}/webide3ever:latest
           
           sudo docker exec web-ide-3ever printenv | grep SPRING
