--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -69,7 +69,7 @@ jobs:
       - name: Transfer application-prod.yml to EC2
         run: |
           scp -o StrictHostKeyChecking=no src/main/resources/application-prod.yml ubuntu@${{ secrets.EC2_PUBLIC_IP }}:/home/ubuntu/application-prod.yml
-          scp -o StrictHostKeyChecking=no env.list ubuntu@${{ secrets.EC2_IP }}:/home/ubuntu/env.list
+          scp -o StrictHostKeyChecking=no env.list ubuntu@${{ secrets.EC2_PUBLIC_IP }}:/home/ubuntu/env.list
 
       - name: Deploy to EC2
         run: |
