--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -66,9 +66,11 @@ jobs:
           echo SPRING_PROFILES_ACTIVE=prod >> env.list
           echo SPRING_DATASOURCE_HIKARI_CONNECTION_TIMEOUT=3000 >> env.list
           echo SPRING_DATASOURCE_HIKARI_MAXIMUM_POOL_SIZE=10 >> env.list
+          echo SPRING_CONFIG_LOCATION=/config/application-prod.yml >> env.list
 
       - name: Transfer application-prod.yml to EC2
         run: |
+          scp -o StrictHostKeyChecking=no src/main/resources/application-prod.yml ubuntu@${{ secrets.EC2_PUBLIC_IP }}:/home/ubuntu/application-prod.yml
           scp -o StrictHostKeyChecking=no env.list ubuntu@${{ secrets.EC2_PUBLIC_IP }}:/home/ubuntu/env.list
 
       - name: Deploy to EC2
@@ -82,6 +84,7 @@ jobs:
           fi
           sudo docker run -d --name web-ide-3ever \
             --env-file /home/ubuntu/env.list \
+            -v /home/ubuntu/application-prod.yml:/config/application-prod.yml \
             -p 8080:8080 ${{ secrets.DOCKERHUB_USERNAME }}/webide3ever:latest
           sudo docker exec web-ide-3ever printenv | grep SPRING
           sudo docker logs web-ide-3ever
