--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,8 +1,11 @@
+server:
+  port: 8080
 spring:
   application:
     name: WebIDE
   profiles:
     active: "prod"
+
   config:
     location: file:/config/
   jpa:
