--- a/nginx.conf
+++ b/nginx.conf
@@ -76,7 +76,7 @@ server {
     listen 80;
     server_name ec2-3-34-144-78.ap-northeast-2.compute.amazonaws.com;
 
-    location /api {
+    location http://ec2-3-34-144-78.ap-northeast-2.compute.amazonaws.com:8080/api {
 
         proxy_buffer_size 128k;
         proxy_buffers 4 256k;
