--- a/nginx.conf
+++ b/nginx.conf
@@ -87,7 +87,7 @@ server {
         proxy_read_timeout 300; #기본 60s
         send_timeout 300; #기본 60s
 
-        proxy_pass localhost:8080;
+        proxy_pass http://ec2-3-34-144-78.ap-northeast-2.compute.amazonaws.com:8080;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
