--- a/nginx.conf
+++ b/nginx.conf
@@ -93,26 +93,45 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
 
-
-
-        # 실제 요청에 대한 CORS 헤더 설정
-        add_header 'Access-Control-Allow-Origin' 'https://3ever.vercel.app' always;
-        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, DELETE, PUT' always;
-        add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization, X-AUTH-TOKEN, Authorization_Refresh' always;
+         # 실제 요청에 대한 CORS 헤더 설정
+        add_header 'Access-Control-Allow-Origin' '*' always;
+        add_header 'Access-Control-Allow-Methods' '*' always;
+        add_header 'Access-Control-Allow-Headers' '*' always;
         add_header 'Access-Control-Allow-Credentials' 'true' always;
         add_header 'Access-Control-Expose-Headers' 'Content-Type, X-AUTH-TOKEN, Authorization, Authorization_Refresh' always;
 
         # CORS 설정
         if ($request_method = 'OPTIONS') {
-            add_header 'Access-Control-Allow-Origin' 'https://3ever.vercel.app';
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, DELETE, PUT';
-            add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization, X-AUTH-TOKEN, Authorization_Refresh';
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Methods' '*';
+            add_header 'Access-Control-Allow-Headers' '*';
             add_header 'Access-Control-Allow-Credentials' 'true';
+            add_header 'Access-Control-Expose-Headers' 'Content-Type, X-AUTH-TOKEN, Authorization, Authorization_Refresh' always;
             add_header 'Access-Control-Max-Age' 1728000;
             add_header 'Content-Type' 'text/plain; charset=UTF-8';
             add_header 'Content-Length' '0';
             return 204;
         }
+
+
+#         # 실제 요청에 대한 CORS 헤더 설정
+#         add_header 'Access-Control-Allow-Origin' 'https://3ever.vercel.app' always;
+#         add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, DELETE, PUT' always;
+#         add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization, X-AUTH-TOKEN, Authorization_Refresh' always;
+#         add_header 'Access-Control-Allow-Credentials' 'true' always;
+#         add_header 'Access-Control-Expose-Headers' 'Content-Type, X-AUTH-TOKEN, Authorization, Authorization_Refresh' always;
+#
+#         # CORS 설정
+#         if ($request_method = 'OPTIONS') {
+#             add_header 'Access-Control-Allow-Origin' 'https://3ever.vercel.app';
+#             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, DELETE, PUT';
+#             add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization, X-AUTH-TOKEN, Authorization_Refresh';
+#             add_header 'Access-Control-Allow-Credentials' 'true';
+#             add_header 'Access-Control-Max-Age' 1728000;
+#             add_header 'Content-Type' 'text/plain; charset=UTF-8';
+#             add_header 'Content-Length' '0';
+#             return 204;
+#         }
     }
 }
 
