--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -4,7 +4,7 @@ server:
     session:
       cookie:
         same-site: none
-        secure: false
+        secure: off
 spring:
   application:
     name: WebIDE
