--- a/web-ide-front/nginx.conf
+++ b/web-ide-front/nginx.conf
@@ -1,10 +1,12 @@
-# react-app/nginx.conf
 server {
-    listen 80;
-    server_name _;
-
+    listen 3000;
     location / {
-        root /usr/share/nginx/html;
-        try_files $uri /index.html;
+        root ./web-ide-front/build;
+        index index.html index.htm;
+        try_files $uri $uri/ /index.html;
+    }
+
+    location ^~ /api {
+        proxy_pass http://localhost:8080;
     }
 }
