--- a/web-ide-front/nginx.conf
+++ b/web-ide-front/nginx.conf
@@ -1,12 +1,35 @@
+# server {
+#     listen 3000;
+#     location / {
+#         root ./web-ide-front/build;
+#         index index.html index.htm;
+#         try_files $uri $uri/ /index.html;
+#     }
+#
+#     location ^~ /api {
+#         proxy_pass http://ec2-52-79-123-145.ap-northeast-2.compute.amazonaws.com:8080;
+#     }
+# }
+
+# web-ide-front/nginx.conf
+
 server {
     listen 3000;
+
+    server_name ec2-52-79-123-145.ap-northeast-2.compute.amazonaws.com;
+
     location / {
-        root ./web-ide-front/build;
+        root /usr/share/nginx/html;
         index index.html index.htm;
         try_files $uri $uri/ /index.html;
+#         try_files $uri /index.html;
     }
 
-    location ^~ /api {
+    location /api/ {
         proxy_pass http://ec2-52-79-123-145.ap-northeast-2.compute.amazonaws.com:8080;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
