--- a/web-ide-front/Dockerfile
+++ b/web-ide-front/Dockerfile
@@ -4,18 +4,18 @@ FROM node:20-alpine as build
 
 WORKDIR /app
 
-COPY ./web-ide-front/package.json ./
-COPY ./web-ide-front/package-lock.json ./
+COPY package.json ./
+COPY package-lock.json ./
 RUN npm install
 
-COPY ./web-ide-front ./
+COPY . .
 RUN npm run build
 
 # Stage 2: Serve the React app with Nginx
 FROM nginx:alpine
 
 COPY --from=build /app/dist /usr/share/nginx/html
-COPY ./web-ide-front/nginx.conf /etc/nginx/conf.d/default.conf
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 80
 
